--- a/app/src/main/res/layout/activity_subject_opt.xml
+++ b/app/src/main/res/layout/activity_subject_opt.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     tools:context=".SubjectOpt">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -26,9 +27,8 @@
                 android:layout_height="72dp"
                 android:layout_margin="0dp"
                 android:layout_weight="1"
-                android:background="#4C21AE"
-                android:drawableLeft="@drawable/unit"
-                android:foreground="?attr/selectableItemBackground"
+                android:background="@drawable/gradient1"
+                android:foreground="@drawable/md_transparent"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
                 android:text="    MMIT-MHCET"
@@ -48,14 +48,16 @@
             >
 
             <Button
+                android:layout_marginHorizontal="@dimen/_10sdp"
                 android:id="@+id/physics"
-                android:layout_width="0dp"
-                android:layout_height="91dp"
-                android:layout_marginHorizontal="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_40sdp"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_99sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
-                android:background="@drawable/physics_chapter"
-                android:text="Physics"
+                android:drawableLeft="@drawable/phy"
+                android:padding="@dimen/_20sdp"
+                android:background="@drawable/md_transparent"
                 android:textAllCaps="false"
                 android:textColor="#2f2e2e"
                 android:textSize="18sp" />
@@ -70,14 +72,16 @@
             android:orientation="horizontal">
 
             <Button
+                android:layout_marginHorizontal="@dimen/_10sdp"
                 android:id="@+id/chemistry"
-                android:layout_width="0dp"
-                android:layout_height="91dp"
-                android:layout_marginHorizontal="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_40sdp"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_99sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
-                android:background="@drawable/chemistry_chapter"
-                android:text="Chemistry"
+                android:drawableRight="@drawable/chem"
+                android:padding="@dimen/_20sdp"
+                android:background="@drawable/md_transparent"
                 android:textAllCaps="false"
                 android:textColor="#2f2e2e"
                 android:textSize="18sp" />
@@ -89,19 +93,21 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
-
             <Button
+                android:layout_marginHorizontal="@dimen/_10sdp"
                 android:id="@+id/maths"
-                android:layout_width="0dp"
-                android:layout_height="91dp"
-                android:layout_marginHorizontal="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_40sdp"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_99sdp"
+                android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_weight="1"
-                android:background="@drawable/round_corners"
-                android:text="Maths"
+                android:drawableLeft="@drawable/maths"
+                android:padding="@dimen/_20sdp"
+                android:background="@drawable/md_transparent"
                 android:textAllCaps="false"
                 android:textColor="#2f2e2e"
                 android:textSize="18sp" />
+
         </LinearLayout>
     </LinearLayout>
     <TextView
