--- a/app/src/main/res/layout/activity_test__papers.xml
+++ b/app/src/main/res/layout/activity_test__papers.xml
@@ -27,7 +27,6 @@
                 android:layout_margin="0dp"
                 android:layout_weight="1"
                 android:background="#4C21AE"
-                android:drawableLeft="@drawable/unit"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
@@ -72,15 +71,15 @@
                     android:entries="@array/Year"
                     />
 
-            <Button
+            <ImageButton
                 android:id="@+id/Button"
                 android:layout_width="match_parent"
-                android:layout_height="91dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_alignParentBottom="true"
-                android:background="@drawable/chemistry_chapter"
-                android:text="GO"
+                android:background="@drawable/md_transparent"
+                android:src="@drawable/go"
                 android:textAllCaps="false"
                 android:textColor="#2f2e2e"
                 android:textSize="18sp" />
