--- a/app/src/main/res/layout/customview.xml
+++ b/app/src/main/res/layout/customview.xml
@@ -3,13 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:padding="@dimen/_5sdp"
     android:layout_height="match_parent">
-    <ImageView
-        android:background="@drawable/baner"
-        android:adjustViewBounds="true"
 
-        android:scaleType="fitXY"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp" />
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/baner" />
 
     <TextView        android:textSize="15sp"
 
@@ -24,20 +23,29 @@
         android:text="https://www.mmit.edu.in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <TextView        android:textSize="15sp"
 
-        android:textAlignment="center"
+    <TextView
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
         android:text="
-        The Marathwada Mitramandal’s Institute of Technology, Lohgaon is established in the year 2008. This multidisciplinary Institute offers University approved UG Programmes in engineering.
-"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        The Marathwada Mitramandal’s Institute of Technology, Lohgaon is established in the year 2008. This multidisciplinary Institute offers University approved UG Programmes in engineering."
+        android:textAlignment="center"
+        android:textSize="15sp" />
     <TextView        android:textSize="15sp"
 
+
         android:textAlignment="center"
-        android:text="Developed By :"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:text=" Developed By :"
+        android:textAlignment="center"
+        android:textSize="15sp" />
     <TextView        android:textSize="15sp"
 
         android:textAlignment="center"
@@ -45,13 +53,37 @@
         android:text="Anuj Jain (anujchampjain@gmail.com)"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="match_parent"
+
+        android:layout_height="27dp"
+        android:autoLink="email"
+        android:text="Paresh Kadam  (subtleparesh@gmail.com)
+"
+        android:textAlignment="center"
+        android:textSize="15sp" />
+    <TextView        android:textSize="15sp"
+
+
+        android:textAlignment="center"
+        android:text=""
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView        android:textSize="15sp"
+
+        android:textAlignment="center"
+        android:text="Tested By :"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <TextView        android:textSize="15sp"
 
         android:textAlignment="center"
         android:autoLink="email"
-        android:text="Paresh Kadam (subtleparesh@gmail.com)"
+        android:text="Sahil Boriwar (sahil.boriwar@mmit.edu.in)"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <TextView        android:textSize="15sp"
 
 
