--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -3,24 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/linearLayout"
-    >
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="108dp"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginLeft="@dimen/_5sdp"
+        android:layout_marginTop="28dp"
+        android:layout_marginRight="@dimen/_5sdp"
 
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/mmit"
-        auto:layout_constraintHorizontal_bias="0.82"
         auto:layout_constraintStart_toStartOf="parent"
         tools:layout_conversion_absoluteHeight="241dp"
         tools:layout_conversion_absoluteWidth="411dp" />
@@ -41,24 +40,26 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="165dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
+
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Marathwada MitraMandal’s Institute of Technology (MMIT)"
+        android:text="Marathwada Mitramandal’s Institute of Technology (MMIT)"
         android:textAlignment="center"
-        android:textSize="@dimen/_25sdp"
+        android:textSize="@dimen/_20sdp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="408dp"
-        android:layout_height="102dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Approved by AICTE New Delhi \n Recognized by DTE Maharashtra \n Affiliated to Savitribai Phule Pune University"
@@ -66,7 +67,10 @@
         android:textSize="@dimen/_15sdp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.727" />
+        app:layout_constraintVertical_bias="0.581" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
