--- a/app/src/main/res/menu/activity_navigation__drawer.xml
+++ b/app/src/main/res/menu/activity_navigation__drawer.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+
+    >
 
 
 
     <item
-        android:id="@+id/lock"
         android:checkable="true"
         android:title="Details" >
         <menu >
